samples/_failures_safe/1761306638_9a273f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de63d26f.c: In function ‘main’:
./samples/SAFE/__tmp_de63d26f.c:148:27: error: expected ‘)’ at end of input
  148 |         buffer_free(&input
      |                    ~      ^
      |                           )
./samples/SAFE/__tmp_de63d26f.c:148:9: error: expected declaration or statement at end of input
  148 |         buffer_free(&input
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_de63d26f.c:148:9: error: expected declaration or statement at end of input
